client/app/shared/components/cp-typeahead/cp-typeahead.component.scss
@import '~styles/core/colors';
@import '~styles/components/form';
@import '~styles/components/button';
@import '~styles/components/dropdown';

.switcherMenu {
  margin-top: 6px;
  position: relative;

  &__button {
    i {
      top: 5px;
      right: 22px;
      line-height: 1;
      font-size: 18px;
      position: absolute;
      transition: transform 200ms ease-in-out;
    }
  }

  &__list {
    @include cpDropdownMenu();

    top: 118%;
    z-index: 9;
    right: 15px;
    min-width: 120px;
    position: absolute;
    border-radius: 4px;

  }
}

textarea {
  height: 38px;
  min-height: 38px;
  position: relative;
}

.typeahead {
  position: relative;

  &__input {
    height: 100%;
    padding: 3px;
    min-height: 38px;
    margin-bottom: 10px;
    background: $color-white;
  }

  &__input-wrapper {
    padding: 0;
    width: 100%;
    height: auto;
    min-height: 36px;
    max-height: 200px;
    position: relative;
    overflow-y: scroll;
    overflow-x: hidden;
    background: $color-white;

    &__chip {
      display: inline-block;
      padding: 4px 0 0 3px;
    }

    &__input {
      padding: 0;
      width: auto;
      border: none;
      line-height: 1;
      padding-left: 8px;
      display: inline-block;
      background: transparent;

      &:hover,
      &:focus,
      &:active {
        border: none;
      }
    }
  }

  &__list {
    @include cpDropdownMenu();

    top: 100%;
    left: 15px;
    z-index: 9;
    position: absolute;
    border-radius: 4px;
    width: calc(100% - 30px);
    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.3);
  }

  &__overflow-unset {
    overflow: unset !important;
  }
}

